<Add user type page>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,11 @@
       "ResetPassword":"Rset Password",
       "SignUp":"SignUp",
       "SignIn":"SignIn"
+    },
+    "USERTYPE":{
+       "NameRequired":"User Type Name Required",
+       "Description":"Description Required"
+        
 
     }
   }
