<add Employee component>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,6 +17,21 @@
   "TotalLeave":"TotalLeave",
   "EmployeeTypeName":"EmployeeTypeName",
   "Band":"Band",
-  "Level":"level"
+  "Level":"level",
+  "UserId":"UserId",
+  "FirstName":"FirstName",
+  "LastName":"LastName",
+  "PhoneNumber":"PhoneNumber",
+  "DateOfJoining":"DateOfJoining",
+  "DateOfBirth":"DateOfBirth",
+  "UserType":"UserType",
+  "Intime":"InTime",
+  "OutTime":"OutTime",
+  "TotalTime":"TotalTime",
+  "Status":"Status",
+  "TaskName":"TaskName",
+  "StartTime":"StartTime",
+  "EndTime":"EndTime"
+  
   
 }
