<Chnage in Attendance component>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,7 @@
   "Add New User":"Add New User",
   "Add New User Type":"Add New User Type",
   "Band": "Band",
+  "Close":"Close",
   "Designation List":"Designation List",
   "Daily Task List":"Daily Task List",
   "DateOfJoining": "DateOfJoining",
@@ -34,6 +35,7 @@
   "Employee Attendance":"Employee Attendance",
   "Employee Daily Task":"Employee Daily Task",
   "FirstName": "FirstName",
+  "FromDate":"FromDate",
   "HRMS": "HRMS",
   "Holiday":"Holiday",
   "HolidayName": "HolidayName",
@@ -50,6 +52,7 @@
   "Password": "Password",
   "PhoneNumber": "PhoneNumber",
   "ResetPassword": "Rset Password",
+  "Reason":"Reason",
   "Save":"Save",
   "SignUp": "SignUp",
   "SignIn": "SignIn",
@@ -60,6 +63,7 @@
   "TITLE": "Hello Angular 2 with ng2-translate!",
   "TaskName": "TaskName",
   "TotalLeave": "TotalLeave",
+  "ToDate":"ToDate",
   "Userid": "UserId",
   "UserId": "UserId",
   "UserType": "UserType" ,
