<Add Approvals Component>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,6 +13,7 @@
   "Add New Leave Type":"Add New Leave Type",
   "Add New User":"Add New User",
   "Add New User Type":"Add New User Type",
+  "Approvals":"Approvals",
   "Band": "Band",
   "Close":"Close",
   "Designation List":"Designation List",
@@ -43,6 +44,8 @@
   "Intime": "InTime",
   "Level": "level",
   "LastName": "LastName",
+  "My Approvals ":"My Approvals ",
+  "My Requests":"My Requests",
   "Name": "Name",
   "No": "No",
   "Leave Types":"Leave Types",
