<add tslint plugin>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -54,7 +54,13 @@
   "PaidLeave": "PaidLeave",
   "Password": "Password",
   "PhoneNumber": "PhoneNumber",
-  "ResetPassword": "Rset Password",
+  "Please Enter UserId":"Please Enter UserId",
+  "Please Enter Password":"Please Enter Password",
+  "Please  Select EmployeeId":"Please  Select EmployeeId",
+  "Please Enter Intime":"Please Enter Intime",
+  "Please Enter Outtime":"Please Enter Outtime",
+  "Please Enter Date":"Please Enter Date",
+  "ResetPassword": "Reset Password",
   "Reason":"Reason",
   "Save":"Save",
   "SignUp": "SignUp",
