Login page refactoring

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,70 +1,72 @@
 {
   "Action": "Action",
-  "Attendance List":"Attendance List",
-  "Add Employee Attendance":"Add Employee Attendance",
-  "Add New Attendance":"Add New Attendance",
-  "Add Employee Daily Task":"Add Employee Daily Task",
-  "Add New Daily Task":"Add New Daily Task",
-  "Add New Designation":"Add New Designation",
-  "Add New Employee":"Add New Employee",
-  "Add New EmployeeType":"Add New EmployeeType",
-  "Add New Holiday":"Add New Holiday",
-  "Add New Leave":"Add New Leave",
-  "Add New Leave Type":"Add New Leave Type",
-  "Add New User":"Add New User",
-  "Add New User Type":"Add New User Type",
-  "Approvals":"Approvals",
+  "Attendance List": "Attendance List",
+  "Add Employee Attendance": "Add Employee Attendance",
+  "Add New Attendance": "Add New Attendance",
+  "Add Employee Daily Task": "Add Employee Daily Task",
+  "Add New Daily Task": "Add New Daily Task",
+  "Add New Designation": "Add New Designation",
+  "Add New Employee": "Add New Employee",
+  "Add New EmployeeType": "Add New EmployeeType",
+  "Add New Holiday": "Add New Holiday",
+  "Add New Leave": "Add New Leave",
+  "Add New Leave Type": "Add New Leave Type",
+  "Add New User": "Add New User",
+  "Add New User Type": "Add New User Type",
+  "Approvals": "Approvals",
   "Band": "Band",
-  "Close":"Close",
-  "Designation List":"Designation List",
-  "Daily Task List":"Daily Task List",
+  "Close": "Close",
+  "Designation List": "Designation List",
+  "Daily Task List": "Daily Task List",
   "DateOfJoining": "DateOfJoining",
   "DateOfBirth": "DateOfBirth",
   "Description": "Description ",
   "Date": "Date",
-  "Delete":"Delete",
-  "Designation":"Designation",
+  "Delete": "Delete",
+  "Designation": "Designation",
   "EndTime": "EndTime",
-  "Edit":"Edit",
-  "Employee Leave":"Employee Leave",
-  "Employeee Leave List":"Employeee Leave List",
-  "Employee":"Employee",
-  "Employee List":"Employee List",
-  "Employee Types":"Employee Types",
-  "Employee Type List":"Employee Type List",
+  "Edit": "Edit",
+  "Employee Leave": "Employee Leave",
+  "Employeee Leave List": "Employeee Leave List",
+  "Employee": "Employee",
+  "Employee List": "Employee List",
+  "Employee Types": "Employee Types",
+  "Employee Type List": "Employee Type List",
   "EmployeeTypeName": "EmployeeTypeName",
-  "Employee Attendance":"Employee Attendance",
-  "Employee Daily Task":"Employee Daily Task",
+  "Employee Attendance": "Employee Attendance",
+  "Employee Daily Task": "Employee Daily Task",
   "FirstName": "FirstName",
-  "FromDate":"FromDate",
+  "FromDate": "FromDate",
   "HRMS": "HRMS",
-  "Holiday":"Holiday",
+  "Holiday": "Holiday",
   "HolidayName": "HolidayName",
-  "HolidayList":"HolidayList",
+  "HolidayList": "HolidayList",
   "Intime": "InTime",
   "Level": "level",
   "LastName": "LastName",
-  "My Approvals ":"My Approvals ",
-  "My Requests":"My Requests",
+  "Login Here": "Login Here",
+  "loginPageMessage": "Access and manage your instances from your HRMS account.",
+  "My Approvals ": "My Approvals ",
+  "My Requests": "My Requests",
   "Name": "Name",
   "No": "No",
-  "Leave Types":"Leave Types",
-  "Leave Type List":"Leave Type List",
+  "Leave Types": "Leave Types",
+  "Leave Type List": "Leave Type List",
   "OutTime": "OutTime",
   "PaidLeave": "PaidLeave",
   "Password": "Password",
   "PhoneNumber": "PhoneNumber",
-  "Please Enter UserId":"Please Enter UserId",
-  "Please Enter Password":"Please Enter Password",
-  "Please  Select EmployeeId":"Please  Select EmployeeId",
-  "Please Enter Intime":"Please Enter Intime",
-  "Please Enter Outtime":"Please Enter Outtime",
-  "Please Enter Date":"Please Enter Date",
+  "Please Enter UserId": "Please Enter UserId",
+  "Please Enter Password": "Please Enter Password",
+  "Please  Select EmployeeId": "Please  Select EmployeeId",
+  "Please Enter Intime": "Please Enter Intime",
+  "Please Enter Outtime": "Please Enter Outtime",
+  "Please Enter Date": "Please Enter Date",
   "ResetPassword": "Reset Password",
-  "Reason":"Reason",
-  "Save":"Save",
-  "SignUp": "SignUp",
-  "SignIn": "SignIn",
+  "Reason": "Reason",
+  "Save": "Save",
+  "SignUp": "Sign Up",
+  "Sign In": "Sign In",
   "SeekLeave": "SeekLeave",
   "Status": "Status",
   "StartTime": "StartTime",
@@ -72,10 +74,11 @@
   "TITLE": "Hello Angular 2 with ng2-translate!",
   "TaskName": "TaskName",
   "TotalLeave": "TotalLeave",
-  "ToDate":"ToDate",
+  "ToDate": "ToDate",
   "Userid": "UserId",
   "UserId": "UserId",
-  "UserType": "UserType" ,
-  "User Types":"User Types",
-  "User Type List":"User Type List"
+  "User Id": "User Id",
+  "UserType": "UserType",
+  "User Types": "User Types",
+  "User Type List": "User Type List"
 }
