<add weekenddate validation in leave page>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,7 +14,9 @@
   "Add New User": "Add New User",
   "Add New User Type": "Add New User Type",
   "Approvals": "Approvals",
+  "Absent Employee":"Absent Employee",
   "Band": "Band",
+  "Basic Info":"Basic Info",
   "Close": "Close",
   "Designation List": "Designation List",
   "Daily Task List": "Daily Task List",
@@ -24,6 +26,8 @@
   "Date": "Date",
   "Delete": "Delete",
   "Designation": "Designation",
+  "Daily Task Complete":"Daily Task Complete",
+  "Daily Task InComplete":"Daily Task InComplete",
   "EndTime": "EndTime",
   "Edit": "Edit",
   "Employee Leave": "Employee Leave",
@@ -37,6 +41,7 @@
   "Employee Daily Task": "Employee Daily Task",
   "FirstName": "FirstName",
   "FromDate": "FromDate",
+  "Gender":"Gender",
   "HRMS": "HRMS",
   "Holiday": "Holiday",
   "HolidayName": "HolidayName",
@@ -62,6 +67,8 @@
   "Please Enter Intime": "Please Enter Intime",
   "Please Enter Outtime": "Please Enter Outtime",
   "Please Enter Date": "Please Enter Date",
+  "Present Employee":"Present Employee",
+  "Personal":"Personal",
   "ResetPassword": "Reset Password",
   "Reason": "Reason",
   "Save": "Save",
@@ -70,6 +77,7 @@
   "SeekLeave": "SeekLeave",
   "Status": "Status",
   "StartTime": "StartTime",
+  "Status Update Successfully":"Status Update Successfully",
   "TotalTime": "TotalTime",
   "TITLE": "Hello Angular 2 with ng2-translate!",
   "TaskName": "TaskName",
@@ -80,5 +88,6 @@
   "User Id": "User Id",
   "UserType": "UserType",
   "User Types": "User Types",
-  "User Type List": "User Type List"
+  "User Type List": "User Type List",
+  "Work":"Work"
 }
