<add new menu Self Attendance>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,6 +75,7 @@
   "SignUp": "Sign Up",
   "Sign In": "Sign In",
   "SeekLeave": "SeekLeave",
+  "Self Attendance":"Self Attendance",
   "Status": "Status",
   "StartTime": "StartTime",
   "Status Update Successfully":"Status Update Successfully",
