<add new field in designation page>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,9 +14,11 @@
   "Add New User": "Add New User",
   "Add New User Type": "Add New User Type",
   "Approvals": "Approvals",
+  "Apply For Leave":"Apply For Leave",
   "Absent Employee":"Absent Employee",
   "Band": "Band",
   "Basic Info":"Basic Info",
+  "Balance Of Leave":"Balance Of Leave",
   "Close": "Close",
   "Designation List": "Designation List",
   "Daily Task List": "Daily Task List",
@@ -50,13 +52,17 @@
   "Level": "level",
   "LastName": "LastName",
   "Login Here": "Login Here",
+  "Log Out": "Log Out",
   "loginPageMessage": "Access and manage your instances from your HRMS account.",
   "My Approvals ": "My Approvals ",
   "My Requests": "My Requests",
+  "My Leave Applications":"My Leave Applications",
+  "My Leave Applications List":"My Leave Applications List",
   "Name": "Name",
   "No": "No",
   "Leave Types": "Leave Types",
   "Leave Type List": "Leave Type List",
+  "Leave Balance Report List":"Leave Balance Report List",
   "OutTime": "OutTime",
   "PaidLeave": "PaidLeave",
   "Password": "Password",
@@ -71,11 +77,15 @@
   "Personal":"Personal",
   "ResetPassword": "Reset Password",
   "Reason": "Reason",
+  "Remaining Sick Leave":"Remaining Sick Leave",
+  "Remaining Paid Leave":"Remaining Paid Leave",
+  "Remaining Leave":"Remaining Leave",
   "Save": "Save",
   "SignUp": "Sign Up",
   "Sign In": "Sign In",
   "SeekLeave": "SeekLeave",
   "Self Attendance":"Self Attendance",
+  "Self Attendance List":"Self Attendance List",
   "Status": "Status",
   "StartTime": "StartTime",
   "Status Update Successfully":"Status Update Successfully",
