<overcome programing mistak>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,12 +58,14 @@
   "My Requests": "My Requests",
   "My Leave Applications":"My Leave Applications",
   "My Leave Applications List":"My Leave Applications List",
+  "Menu":"Menu",
   "Name": "Name",
   "No": "No",
   "Leave Types": "Leave Types",
   "Leave Type List": "Leave Type List",
   "Leave Balance Report List":"Leave Balance Report List",
   "OutTime": "OutTime",
+  "Page Name":"Page Name",
   "PaidLeave": "PaidLeave",
   "Password": "Password",
   "PhoneNumber": "PhoneNumber",
@@ -89,11 +91,13 @@
   "Status": "Status",
   "StartTime": "StartTime",
   "Status Update Successfully":"Status Update Successfully",
+  "Sub Menu":"Sub Menu",
   "TotalTime": "TotalTime",
   "TITLE": "Hello Angular 2 with ng2-translate!",
   "TaskName": "TaskName",
   "TotalLeave": "TotalLeave",
   "ToDate": "ToDate",
+  "Url":"Url",
   "Userid": "UserId",
   "UserId": "UserId",
   "User Id": "User Id",
