<add new componenet regularization>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,6 +16,8 @@
   "Approvals": "Approvals",
   "Apply For Leave":"Apply For Leave",
   "Absent Employee":"Absent Employee",
+  "Add Regularization":"Add Regularization",
+  "Add New Regularization ":"Add New Regularization ",
   "Band": "Band",
   "Basic Info":"Basic Info",
   "Balance Of Leave":"Balance Of Leave",
@@ -82,6 +84,8 @@
   "Remaining Sick Leave":"Remaining Sick Leave",
   "Remaining Paid Leave":"Remaining Paid Leave",
   "Remaining Leave":"Remaining Leave",
+  "Regularization":"Regularization",
+  "Regularization List":"Regularization List",
   "Save": "Save",
   "SignUp": "Sign Up",
   "Sign In": "Sign In",
