<add new component project>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -61,6 +61,7 @@
   "My Leave Applications":"My Leave Applications",
   "My Leave Applications List":"My Leave Applications List",
   "Menu":"Menu",
+  "My Profile":"My Profile",
   "Name": "Name",
   "No": "No",
   "Leave Types": "Leave Types",
@@ -79,6 +80,7 @@
   "Please Enter Date": "Please Enter Date",
   "Present Employee":"Present Employee",
   "Personal":"Personal",
+  "Profile":"Profile",
   "ResetPassword": "Reset Password",
   "Reason": "Reason",
   "Remaining Sick Leave":"Remaining Sick Leave",
