<display assign task>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,10 +18,13 @@
   "Absent Employee":"Absent Employee",
   "Add Regularization":"Add Regularization",
   "Add New Regularization ":"Add New Regularization ",
+  "Assign Task List":"Assign Task List",
+  "Assign Task":"Assign Task",
   "Band": "Band",
   "Basic Info":"Basic Info",
   "Balance Of Leave":"Balance Of Leave",
   "Close": "Close",
+  "Complete Task":"Complete Task",
   "Designation List": "Designation List",
   "Daily Task List": "Daily Task List",
   "DateOfJoining": "DateOfJoining",
@@ -51,6 +54,7 @@
   "HolidayName": "HolidayName",
   "HolidayList": "HolidayList",
   "Intime": "InTime",
+  "InComplete Task":"InComplete Task",
   "Level": "level",
   "LastName": "LastName",
   "Login Here": "Login Here",
