<Add new menu Notification>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -72,6 +72,8 @@
   "Leave Type List": "Leave Type List",
   "Leave Balance Report List":"Leave Balance Report List",
   "OutTime": "OutTime",
+  "Pages List": "Pages List",
+  "Page": "Page",
   "Page Name":"Page Name",
   "PaidLeave": "PaidLeave",
   "Password": "Password",
@@ -108,6 +110,7 @@
   "TotalLeave": "TotalLeave",
   "ToDate": "ToDate",
   "Url":"Url",
+  "User Type Page Association": "User Type Page Association",
   "Userid": "UserId",
   "UserId": "UserId",
   "User Id": "User Id",
